--- a/UnitTest_6_2(rec)/UnitTest_6_2(rec).vcxproj
+++ b/UnitTest_6_2(rec)/UnitTest_6_2(rec).vcxproj
@@ -167,6 +167,11 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lab_6_2(rec)\Lab_6_2(rec).vcxproj">
+      <Project>{ed423bb5-ffd5-4d84-b1a4-707b00627894}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
